--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "bootstrap": "^5.2.3"
+        "@fortawesome/fontawesome-free": "^6.3.0",
+        "bootstrap": "^5.2.3",
+        "font-awesome": "^4.7.0"
     }
 }
