--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/orm": "^2.14",
         "dompdf/dompdf": "^2.0",
         "fzaninotto/faker": "^1.5",
+        "knplabs/knp-snappy-bundle": "^1.9",
+        "mikehaertl/phpwkhtmltopdf": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.16",
         "sensio/framework-extra-bundle": "^6.1",
